2010-12-11 Matthias Scholz <ms@jammerhund.de>
	* WorkbenchFrame
		* changed contents of the statusPanel to JSplitPane's
		* DividerLocation of the JSplitPane's will be automaticaly saved/restored
			through the PersistentBlackboard
	* update ui.WorkbenchFrame.copy-to-clipboard key in lang files for es, fi, fr, it

2010-12-05 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in TreeLayerNamePanel : now check if the layerable is selected
      a deselected layer moved to another place could be deleted
    * Fixed a bug in JoinTableDataSourceCSV. Now, empty lines are silently
      skipped

2010-12-02 mmichaud <michael.michaud@free.fr>
    * release a 1.4.0.3 version which is just a new windows installer with
      the current build-2178 version

2010-11-30 Matthias Scholz <ms@jammerhund.de>
	* WorkbenchFrame
		* changed the messageLabel to a JTextfield for copy&paste the content
	* added ui.WorkbenchFrame.copy-to-clipboard I18n key for the tooltip

2010-11-23 mmichaud <michael.michaud@free.fr>
	* Several bugs fixed in Simple query tool (QueryDialog.java)
		* remove the useless cancel button
		* stop the querying process if exit button is clicked (dialog was just
		  hidden, but the query was going on)
		* move Thread.yield so that process can be interrupted anytime, not
		  just when a feature retained in the query is found
		* deactivate refresh button while processing the query

2010-11-22 Matthias Scholz <ms@jammerhund.de>
	* WorkbenchFrame.jbInit():
		*add a MouseListener to the messageLabel which is copying the text of the statusbar to the clipboard

2010-11-15 mmichaud <michael.michaud@free.fr>
    * Changed version number to 1.4.1alpha
    * Fixed a NPE in ExtractLayersByAttribute

2010-11-07 mmichaud <michael.michaud@free.fr>

           **** new release of OpenJUMP 1.4.0.2 ****
    
    * postgresql driver replaced by a newer one (for pgsql 9.0 compatibility)
    * openjump bundled with Sextante and postgis plugin fixed :